kubernetes-course/section12/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
          type: PathPrefix
          value: /login
      backendRefs:
        - name: example-spec
          port: 8080
